--- a/config.json
+++ b/config.json
@@ -1,7 +1,8 @@
 {
-    "GrowID": "capcieszg",
-    "Password": "ubikntol1@",
+    "GrowID": "luckyme02",
+    "Password": "balane440@!",
     "Email": "zdgzcfsfs",
-    "Domain": "@gmail.com",
+    "Domain": "@ajjquqjagmail.com",
     "Port": 17198
 }
+
